# Artemus

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.hypothesis/constants/: 02b1f40629393a88  02cb71e0282dd696  0655e95f3438e254  1e9b3fe0b96ae8ea  26f9edc046af8791  384ec2636f178472  3967132a90bb79e6  4248593cf38e92ec  4347f67387d1dc9a  44967a2370aa95ba  4d3b332b44ad9a4f  55723872d018666f  72dad3fc7916b2e5  7b81f79a38c95c1f  7fb6c55bb4969d3f  970dc111ccefc222  a192e2cc497408c4  a3ad3628295b1f93  bd86cdafc841c711  c14b4955ef62b2e6  db2ee7b0249ded2c  e00021a7e71e1357
.hypothesis/examples/04e6b3400353b141/: 5f16fa26522846aa  6451d88dae653c67  9a9861348aad0d38  b1d85730d080ce43  b9e0d3d65dfab06c  d3d8ceb2a07b9045  deafbed13b3b74c7
.hypothesis/examples/5f16fa26522846aa/: 0326cc8a3ecb1bf7  0fd760aa2a1d4682  1c1bb173947c1c0f  2b927a7e024f672d  2d9eff4e284d38ac  3a0a4f9a8af2da2a  420cc57820e59aae  44aedc22d9a2ea1a  4b978979f49d9161  53d18264a9aca27a  557ddf3eff36e038  571a93fcc2a828a7  59182ffcda54e584  5ba4a31fa3d6c7fe  67ce872250ee0d80  68cd0011c8a592ad  747117847aee462e  7bf4999f0300d8cb  822b3856c39332f9  85c292ffc0e2602a  9708319c801566f7  b1d956a725fecc7b  b3d8aa52de9024ff  b8f56cfad714a871  bb086f8665a4c23e  bbe86e11bf653f6c  c57e38604df7d9f7  d9bceb338322f461  e4650c77da513ac9  ec45c595cd9e401c  f2ae70f18c94e065  f9e0f605d6662590  ff002b90a0caeb38  ff8b33abe7c6166d
.hypothesis/examples/6451d88dae653c67/: 08130e4db7478034  088a1bd5502fd669  09899d3060de30f6  0b4ee5a1269ac33c  223b4a091746b842  237e705123070e9e  23812554524f0e5d  24778fe746a2a19f  26c978d5ef43b019  36141e648f381953  3f8cd2b4cb036632  408562d959b58994  40a168a277c161dd  451c5b7286214cdb  481583274fce2cf4  484cbc15f81bbd86  4857612afddacc2c  4a3fb6cbb828b584  4df7a933d5c78ad2  4df95c3064cb532b  535eb9e46a25edd2  5787b7415e08b7c4  59b2b0c95473bef7  602642aa10d41484  68fdc3b50d053af5  6e6815886f2ae5a3  6ee84663637230b8  79aa9c1db54fff01  7bc1afbe69e68312  84031266642bc704  8958f8e51d9505db  8dd3bb3d18f262e4  909e099fdb9e6c03  90c66fccd33ffe5e  945200df67784b91  9b77046e47d75d03  a0359c4a7dcfe36b  a596ba9f99208200  a97712b5bbc50665  b8d0a0db13fbfb61  (+13 more)
.hypothesis/examples/9a9861348aad0d38/: 347ce60fc1ef6199  36421cba2478740b  3cc3861e17f1a771  4c8b53bd9079d44c  64c4745aa380b300  79c7c0d9a76f2300  8b7077c773493a50  a2792da3cbcb975f  b2599b886a22b2da  b2ea02fd4121cd5e  b592853a4e23a03e  dce85ab95e269bec  ed83b03001ce173c
.hypothesis/examples/b1d85730d080ce43/: 7cf1d440c41848c0
.hypothesis/examples/b9e0d3d65dfab06c/: a7c42fbbf1570318
.hypothesis/examples/d3d8ceb2a07b9045/: 02799bd0307f0ea3  0717810b02284050  08e6a809d338bba4  09a32f3a5f55b94c  0a87beb395b95512  190d2c1f480c9696  1beac803a7e8cec6  1d81b3ba092d67b3  28ba63cb59483e77  442e7e526d45446d  47fc63dff4a313f5  5759805ec13e1d90  63cbb4b988f5ce4e  73e6d48277a15d40  780b3a26d92d9ab8  7c8afd1e6e82207a  7f208d5a08b28777  84943816838fc425  867e89542192404b  88d5668e4c4f8908  8ca6cf61e73b3616  939decf505bb0a77  9a6f5a265d946de5  (+13 more)
src/newsletter_generator/: __init__.py  aggregator.py  cli.py  config.py  exporter.py  generators.py  models.py  orchestrator.py  synthesizer.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_cli.py  test_config.py  test_exporter.py  test_generators.py  test_integration.py  test_models.py  test_orchestrator.py  test_setup.py  test_synthesizer.py
(+5 files in other folders)
